--- a/example.ipynb
+++ b/example.ipynb
@@ -13,9 +13,30 @@
     "eg in linux/bash:\n",
     "      export JULIA_NUM_THREADS=`nproc`; julia\n",
     "\n",
-    "to install dependencies run:\n",
+    "or just run julia with --threads=auto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m git-repo `https://github.com/ndawlab/em.git`\n",
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `C:\\Users\\ndaw\\.julia\\environments\\v1.9\\Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `C:\\Users\\ndaw\\.julia\\environments\\v1.9\\Manifest.toml`\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to install the package (only need to do this once):\n",
+    "# (note this fails with a weird error if you run this notebook from this directory)\n",
     "import Pkg\n",
-    "Pkg.add([\"DataFrames\", \"ForwardDiff\", \"Optim\", \"LinearAlgebra\", \"StatsFuns\", \"SpecialFunctions\",  \"Statistics\", \"Distributions\", \"GLM\"])\n"
+    "Pkg.add(url=\"https://github.com/ndawlab/em.git/\")"
    ]
   },
   {
@@ -29,15 +50,11 @@
     "full = false    # Maintain full covariance matrix (vs a diagional one) at the group level\n",
     "emtol = 1e-3    # stopping condition (relative change) for EM\n",
     "\n",
-    "# load the code\n",
-    "# change this to where you keep the code\n",
-    "# directory = \"/mnt/c/Users/daw/Dropbox (Princeton)/expts/julia em/git/em\"\n",
-    "directory = \"/users/ndaw/Dropbox (Princeton)/expts/julia em/git/em\"\n",
-    "\n",
-    "push!(LOAD_PATH,directory)\n",
+    "# load EM package\n",
     "using EM\n",
     "\n",
     "# this loads additional packages used in examples below\n",
+    "# install them with install\n",
     "\n",
     "using Statistics\n",
     "using Random\n",
@@ -91,20 +108,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2-element Vector{Float64}:\n",
-       " 5.0\n",
-       " 1.0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set up the fit\n",
     "\n",
@@ -144,7 +148,7 @@
     "# sigma: one element starting variance for each model parameter (this is really variance not SD)\n",
     "# if there is only one model parameter it needs to be a length-one vector eg. sigma = [5.]\n",
     "\n",
-    "startsigma = [5., 1]\n",
+    "startsigma = [5., 1];\n",
     "\n"
    ]
   },
@@ -165,21 +169,21 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "iter: 9\n",
-      "betas: [0.92 -0.23; 0.99 0.1; -0.04 0.76]\n",
-      "sigma: [0.27, 0.74]\n",
-      "free energy: -22995.277507\n",
-      "change: [0.00021, -0.000331, 0.000284, 9.2e-5, -0.000974, 3.9e-5, 0.000672, 0.000147]\n",
-      "max: 0.000974\n"
+      "iter: 12\n",
+      "betas: [0.95 -0.08; 0.94 0.01; -0.02 0.85]\n",
+      "sigma: [0.29, 0.64]\n",
+      "free energy: -22912.710021\n",
+      "change: [4.0e-5, -0.000122, 6.3e-5, 0.00053, -0.000175, 2.0e-6, 0.000114, 9.0e-6]\n",
+      "max: 0.00053\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "3×2 Matrix{Float64}:\n",
-       "  0.915928   -0.233291\n",
-       "  0.985689    0.104455\n",
-       " -0.0409915   0.756387"
+       "  0.947158  -0.0813925\n",
+       "  0.940341   0.0115734\n",
+       " -0.016061   0.850036"
       ]
      },
      "execution_count": 4,
@@ -214,9 +218,9 @@
      "data": {
       "text/plain": [
        "3×2 adjoint(::Matrix{Float64}) with eltype Float64:\n",
-       " 3.13697e-88  0.00011836\n",
-       " 1.79943e-84  0.0712136\n",
-       " 0.291688     1.26102e-26"
+       " 4.8045e-87   0.16772\n",
+       " 2.30126e-78  0.827098\n",
+       " 0.658954     3.8568e-36"
       ]
      },
      "execution_count": 5,
@@ -242,57 +246,58 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "StatsModels.TableRegressionModel{LinearModel{GLM.LmResp{Vector{Float64}}, GLM.DensePredChol{Float64, LinearAlgebra.CholeskyPivoted{Float64, Matrix{Float64}}}}, Matrix{Float64}}\n",
-       "\n",
-       "beta ~ 1 + cov + cov2\n",
-       "\n",
-       "Coefficients:\n",
-       "──────────────────────────────────────────────────────────────────────────\n",
-       "                  Coef.  Std. Error      t  Pr(>|t|)  Lower 95%  Upper 95%\n",
-       "──────────────────────────────────────────────────────────────────────────\n",
-       "(Intercept)   0.892822    0.0350906  25.44    <1e-70   0.823707   0.961936\n",
-       "cov           0.882962    0.0347236  25.43    <1e-70   0.814569   0.951354\n",
-       "cov2         -0.0350505   0.0378879  -0.93    0.3558  -0.109675   0.039574\n",
-       "──────────────────────────────────────────────────────────────────────────"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "StatsModels.TableRegressionModel{LinearModel{GLM.LmResp{Vector{Float64}}, GLM.DensePredChol{Float64, LinearAlgebra.CholeskyPivoted{Float64, Matrix{Float64}}}}, Matrix{Float64}}\n",
-       "\n",
-       "alpha ~ 1 + cov + cov2\n",
-       "\n",
-       "Coefficients:\n",
-       "───────────────────────────────────────────────────────────────────────────\n",
-       "                  Coef.  Std. Error      t  Pr(>|t|)   Lower 95%  Upper 95%\n",
-       "───────────────────────────────────────────────────────────────────────────\n",
-       "(Intercept)  -0.200008    0.0501431  -3.99    <1e-04  -0.29877    -0.101245\n",
-       "cov           0.0821765   0.0496187   1.66    0.0990  -0.0155532   0.179906\n",
-       "cov2          0.622858    0.0541403  11.50    <1e-24   0.516222    0.729493\n",
-       "───────────────────────────────────────────────────────────────────────────"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "iter: 9\n",
-      "betas: [0.89 -0.2]\n",
-      "sigma: [1.17, 1.09]\n",
-      "free energy: NaN\n",
-      "change: [2.0e-6, -8.0e-6, 7.0e-6, 6.0e-6]\n",
-      "max: 8.0e-6\n"
+      "iter: 12\n",
+      "betas: [0.9 -0.04]\n",
+      "sigma: [1.17, 1.11]\n",
+      "Warning: Omitting from LML 5 subjects with non-invertible Hessian\n",
+      "free energy: -23783.131705\n",
+      "change: [0.0, -4.0e-6, 1.0e-6, 0.0]\n",
+      "max: 4.0e-6\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "StatsModels.TableRegressionModel{LinearModel{GLM.LmResp{Vector{Float64}}, GLM.DensePredChol{Float64, LinearAlgebra.CholeskyPivoted{Float64, Matrix{Float64}, Vector{Int64}}}}, Matrix{Float64}}\n",
+       "\n",
+       "beta ~ 1 + cov + cov2\n",
+       "\n",
+       "Coefficients:\n",
+       "────────────────────────────────────────────────────────────────────────────\n",
+       "                   Coef.  Std. Error      t  Pr(>|t|)   Lower 95%  Upper 95%\n",
+       "────────────────────────────────────────────────────────────────────────────\n",
+       "(Intercept)   0.898618     0.0364278  24.67    <1e-67   0.82687    0.970367\n",
+       "cov           0.82229      0.034146   24.08    <1e-66   0.755036   0.889545\n",
+       "cov2         -0.00558035   0.0357861  -0.16    0.8762  -0.0760652  0.0649045\n",
+       "────────────────────────────────────────────────────────────────────────────"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "StatsModels.TableRegressionModel{LinearModel{GLM.LmResp{Vector{Float64}}, GLM.DensePredChol{Float64, LinearAlgebra.CholeskyPivoted{Float64, Matrix{Float64}, Vector{Int64}}}}, Matrix{Float64}}\n",
+       "\n",
+       "alpha ~ 1 + cov + cov2\n",
+       "\n",
+       "Coefficients:\n",
+       "────────────────────────────────────────────────────────────────────────────\n",
+       "                   Coef.  Std. Error      t  Pr(>|t|)   Lower 95%  Upper 95%\n",
+       "────────────────────────────────────────────────────────────────────────────\n",
+       "(Intercept)  -0.0436486    0.0493965  -0.88    0.3778  -0.140941   0.0536435\n",
+       "cov          -0.00676074   0.0463024  -0.15    0.8840  -0.0979586  0.0844371\n",
+       "cov2          0.572827     0.0485264  11.80    <1e-25   0.477249   0.668405\n",
+       "────────────────────────────────────────────────────────────────────────────"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -327,7 +332,7 @@
     {
      "data": {
       "text/plain": [
-       "22371.741108231596"
+       "22331.093777006565"
       ]
      },
      "execution_count": 7,
@@ -350,7 +355,7 @@
     {
      "data": {
       "text/plain": [
-       "22415.020221369236"
+       "22374.372890144205"
       ]
      },
      "execution_count": 8,
@@ -375,7 +380,7 @@
     {
      "data": {
       "text/plain": [
-       "22379.741108231596"
+       "22339.093777006565"
       ]
      },
      "execution_count": 9,
@@ -396,13 +401,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subject: 1..2..3..4..5..6..7..8..9..10..11..12..13..14..15..16..17..18..19..20..21..22..23..24..25..26..27..28..29..30..31..32..33..34..35..36..37..38..39..40..41..42..43..44..45..46..47..48..49..50..51..52..53..54..55..56..57..58..59..60..61..62..63..64..65..66..67..68..69..70..71..72..73..74..75..76..77..78..79..80..81..82..83..84..85..86..87..88..89..90..91..92..93..94..95..96..97..98..99..100..101..102..103..104..105..106..107..108..109..110..111..112..113..114..115..116..117..118..119..120..121..122..123..124..125..126..127..128..129..130..131..132..133..134..135..136..137..138..139..140..141..142..143..144..145..146..147..148..149..150..151..152..153..154..155..156..157..158..159..160..161..162..163..164..165..166..167..168..169..170..171..172..173..174..175..176..177..178..179..180..181..182..183..184..185..186..187..188..189..190..191..192..193..194..195..196..197..198..199..200..201..202..203..204..205..206..207..208..209..210..211..212..213..214..215..216..217..218..219..220..221..222..223..224..225..226..227..228..229..230..231..232..233..234..235..236..237..238..239..240..241..242..243..244..245..246..247..248..249..250.."
+      "\n",
+      "iter: 4\n",
+      "betas: [0.94 -0.07; 0.94 0.02; -0.02 0.85]\n",
+      "sigma: [0.29, 0.62]\n",
+      "free energy: -22894.045173\n",
+      "change: [9.9e-5, -0.000891, 0.000159, 7.4e-5, -0.000796, 7.0e-6, 0.000266, 0.000403]\n",
+      "max: 0.000891\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "22379.640703784487"
+       "22341.82677834569"
       ]
      },
      "execution_count": 10,
@@ -422,19 +433,26 @@
     "# but importantly these are per subject scores that you can compare in paired tests\n",
     "# across models as per Stephan et al. random effects model comparison"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.1",
+   "display_name": "Julia 1.9.1",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.9"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.1"
+   "version": "1.9.1"
   }
  },
  "nbformat": 4,
